fixed left and right alignment using flexbox

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,11 @@ aside {
   background: #ddd;
 }
 
+.flex {
+  display: flex;
+  
+}
+
 main {
   flex: 3;
 }
